--- a/assets/po/gd.po
+++ b/assets/po/gd.po
@@ -20,25 +20,24 @@ msgstr ""
 
 #: menu/numplayerspage.py:16
 msgid "How many players?"
-msgstr ""
+msgstr "Co mheud cluicheadair?"
 
 #: menu/already_dlg.py:12
 #, python-format
 msgid "The key %s is already used by player %s for %s."
-msgstr ""
+msgstr "Tha an iuchair %s ‘ga chleachdadh le cluicheadair %s airson %s mu thràth."
 
 #: menu/onlinepage.py:27
 msgid "Play"
-msgstr ""
+msgstr "Cluich"
 
 #: menu/onlinepage.py:31 menu/registerpage.py:45
 msgid "Register"
 msgstr "Clàraich"
 
 #: menu/onlinepage.py:32
-#, fuzzy
 msgid "Reset password"
-msgstr "glèidh am facal-faire"
+msgstr "Ath-shuidhich am facal-faire"
 
 #: menu/onlinepage.py:69
 msgid "Server problem"
@@ -67,11 +66,11 @@ msgstr "’Ga cheangail"
 
 #: menu/multiplayerpage.py:23
 msgid "Local"
-msgstr ""
+msgstr "Ionadail"
 
 #: menu/multiplayerpage.py:24
 msgid "Online"
-msgstr ""
+msgstr "Air loidhne"
 
 #: menu/resetpage.py:21 menu/registerpage.py:21
 msgid "Your email:"
@@ -100,9 +99,7 @@ msgstr "Ath-shuidhich"
 msgid ""
 "We've sent an email to you (please check your spam folder if you can't find "
 "it) with the instructions for completing the reset."
-msgstr ""
-"Cuir sinn post-d thugad (thoir sùil air a’ phost-truilleis agad mura lorg "
-"thu e) le stiùireadh air mar a choileanas tu an ath-shuidheachadh."
+msgstr "Cuir sinn post-d thugad (thoir sùil air a’ phost-truilleis agad mura lorg thu e) le stiùireadh air mar a choileanas tu an ath-shuidheachadh."
 
 #: menu/resetpage.py:56
 msgid "This email isn't in our archive."
@@ -145,9 +142,8 @@ msgid "Supporters"
 msgstr "Luchd-taic"
 
 #: menu/inputpage.py:34 menu/inputpage.py:36
-#, fuzzy
 msgid "Player"
-msgstr "Aon chluicheadair"
+msgstr "Cluicheadair"
 
 #: menu/inputpage.py:39 menu/inputpage.py:42
 msgid "Use the joypad when present"
@@ -183,7 +179,7 @@ msgstr "Brùth air an iuchair gus a chlàradh"
 
 #: menu/inputpage.py:157
 msgid "Player 2"
-msgstr ""
+msgstr "Cluicheadair 2"
 
 #: menu/inputpage.py:160
 msgid "Pause"
@@ -191,11 +187,11 @@ msgstr "Cuir ’na stad"
 
 #: menu/inputpage.py:195
 msgid "Player 3"
-msgstr ""
+msgstr "Cluicheadair 3"
 
 #: menu/inputpage.py:218
 msgid "Player 4"
-msgstr ""
+msgstr "Cluicheadair 4"
 
 #: menu/optionpage.py:37
 msgid "Language"
@@ -289,7 +285,7 @@ msgstr "Sgrìobh d’ ainm:"
 msgid ""
 "If you use the keyboard, press FIRE to edit the field, then ENTER when "
 "you're done"
-msgstr ""
+msgstr "Ma tha thu a’ cleachdadh a’ mheur-chlàir, brùth air “Loisg” gus an raon a dheasachadh ’s air Enter an uairsin nuair a bhios tu deiseil"
 
 #: menu/driverpage.py:159 menu/driverpage.py:167 menu/driverpage.py:168
 #: menu/driverpage.py:169 menu/driverpage.py:171 menu/driverpage.py:174
@@ -299,30 +295,27 @@ msgid "your name"
 msgstr "d’ ainm"
 
 #: menu/driverpage.py:196
-#, fuzzy
 msgid "Select the drivers"
-msgstr "Tagh an draibhear"
+msgstr "Tagh na draibhearan"
 
 #: menu/driverpage.py:200
-#, fuzzy
 msgid "Write your names:"
-msgstr "Sgrìobh d’ ainm:"
+msgstr "Sgrìobhaibh ur n-ainmean:"
 
 #: menu/driverpage.py:239
 msgid ""
 "If you use the keyboard, press FIRE to edit the field, then ENTER when "
 "you're done. Other players can't move while someoneis writing (since, with "
 "keyboards, some letters may be bound to movements)."
-msgstr ""
+msgstr "Ma tha thu a’ cleachdadh a’ mheur-chlàir, brùth air “Loisg” gus an raon a dheasachadh ’s air Enter an uairsin nuair a bhios tu deiseil. Chan urrainn do chluicheadairean eile gluasad fhad ’s a tha cuideigin a’ sgrìobhadh (on a bhios cuid a litrichean air a’ mheur-chlàr naisgte ri gluasadan ma dh’fhaoidte)."
 
 #: menu/mainpage.py:99
 msgid "Single Player"
 msgstr "Aon chluicheadair"
 
 #: menu/mainpage.py:100
-#, fuzzy
 msgid "Multiplayer"
-msgstr "ioma-chluicheadair"
+msgstr "Ioma-chluicheadair"
 
 #: menu/mainpage.py:101
 msgid "Options"
@@ -353,26 +346,19 @@ msgid "show"
 msgstr "seall"
 
 #: menu/clientpage.py:24
-#, fuzzy
 msgid "Current waiting hosting users"
-msgstr "Cleachdaichean air loidhne an-dràsta"
+msgstr "Cleachdaichean a tha ag òstadh ’s a feitheamh"
 
 #: menu/registerpage.py:69
 msgid ""
 "Your account has been registered. Now, in order to activate it, you should "
 "click the link that we've sent to your email (please check your spam folder "
 "if you can't find it). After that, you can log in."
-msgstr ""
-"Chaidh an cunntas agad a chlàradh. Nise, airson a ghnìomhachadh, bu chòir "
-"dhut briogadh air a’ cheangal a chuir sinn thugad air a’ phost-d (thoir sùil "
-"air a’ phost-truilleis agad mura lorg thu e). ’S urrainn dhut clàradh a-"
-"steach an uairsin."
+msgstr "Chaidh an cunntas agad a chlàradh. Nise, airson a ghnìomhachadh, bu chòir dhut briogadh air a’ cheangal a chuir sinn thugad air a’ phost-d (thoir sùil air a’ phost-truilleis agad mura lorg thu e). ’S urrainn dhut clàradh a-steach an uairsin."
 
 #: menu/registerpage.py:74
 msgid "Your nickname's format is invalid: please use only letters and numbers."
-msgstr ""
-"Tha fòrmat d’ fhar-ainm mì-dhligheach: na cleachd ach litrichean is "
-"àireamhan."
+msgstr "Tha fòrmat d’ fhar-ainm mì-dhligheach: na cleachd ach litrichean is àireamhan."
 
 #: menu/registerpage.py:76
 msgid "Your email's format is invalid."
@@ -388,7 +374,7 @@ msgstr "Chaidh am post-d agad a chleachdadh roimhe."
 
 #: menu/registerpage.py:79
 msgid "Please use more than 6 characters for your password."
-msgstr ""
+msgstr "Cleachd còrr is 6 caractaran airson an fhacail-fhaire agad."
 
 #: menu/singleplayerpage.py:15
 msgid "Single race"
@@ -407,10 +393,7 @@ msgid ""
 "Please, visit our site after exiting!\n"
 "\n"
 "It helps us! Thank you!"
-msgstr ""
-"Nach tadhail thu air an làrach-lìn againn às dèidh fhàgail?\n"
-"\n"
-"Cuidichidh seo sinn! Mòran taing!"
+msgstr "Nach tadhail thu air an làrach-lìn againn às dèidh fhàgail?\n\nCuidichidh seo sinn! Mòran taing!"
 
 #: menu/exitmenu/exitpage.py:19
 msgid "visit our site after exiting"
@@ -426,10 +409,7 @@ msgid ""
 "What do you want to do?\n"
 "\n"
 "Note: use '%s' for pausing the game."
-msgstr ""
-"Dè tha thu airson dèanamh?\n"
-"\n"
-"An aire: cleachd “%s” gus an geama a chur ’na stad."
+msgstr "Dè tha thu airson dèanamh?\n\nAn aire: cleachd “%s” gus an geama a chur ’na stad."
 
 #: menu/ingamemenu/ingamepage.py:26
 msgid "back to the game"
@@ -496,30 +476,21 @@ msgid "remove from the match"
 msgstr "thoir air falbh on gheama"
 
 #: menu/multiplayer/network_dlg.py:13
-#, fuzzy
 msgid ""
 "Connection error. Please check that (i) your firewall allows traffic for "
 "Yorg on port 9099 and (ii) the server user has opened her port 9099 (here is "
 "a guide for checking it: https://www.ya2.it/pages/check-your-ports.html)."
-msgstr ""
-"Mearachd leis a’ cheangal. Dearbhaich (i) gun ceadaich an cachaileith-theine "
-"agad trafaig airson Yorg air port 9099 agus (ii) gun do dh’fhosgail "
-"cleachdaiche an fhrithealaiche port port 9099 (seo treòir air mar a "
-"dhearbhaicheas tu seo: http://www.ya2.it/pages/check-your-ports.html)."
+msgstr "Mearachd leis a’ cheangal. Dearbhaich (i) gun ceadaich an cachaileith-theine agad trafaig Yorg air port 9099 agus (ii) gun do dh’fhosgail cleachdaiche an fhrithealaiche port 9099 (seo treòir air mar a dhearbhas tu e: https://www.ya2.it/pages/check-your-ports.html)."
 
 #: menu/multiplayer/multiplayerfrm.py:95
 msgid ""
 "We've detected connection problems during server's creation. Please check "
 "your connection."
-msgstr ""
-"Mhothaich sinn do dhuilgheadasan ceangail nuair a chruthaich sinn am "
-"frithealaiche. Thoir sùil air a’ cheangal agad."
+msgstr "Mhothaich sinn do dhuilgheadasan ceangail nuair a chruthaich sinn am frithealaiche. Thoir sùil air a’ cheangal agad."
 
 #: menu/multiplayer/multiplayerfrm.py:98
 msgid "We can't connect to httpbin. Please retry later."
-msgstr ""
-"Chan urrainn dhuinn ceangal a dhèanamh gu httpbin. Feuch ris a-rithist an "
-"ceann greis."
+msgstr "Chan urrainn dhuinn ceangal a dhèanamh gu httpbin. Feuch ris a-rithist an ceann greis."
 
 #: menu/multiplayer/invite_dlg.py:16
 #, python-format
@@ -616,9 +587,8 @@ msgid "weapon"
 msgstr "arm"
 
 #: yyagl/racing/car/gui.py:449
-#, fuzzy
 msgid "waiting for the other players"
-msgstr "a’ feitheamh ris an fhrithealaiche"
+msgstr "a’ feitheamh air na cluicheadairean eile"
 
 #: yyagl/racing/car/gui.py:577
 #, python-format
@@ -723,6 +693,7 @@ msgstr "crochaidhean: +"
 #~ "If you are a supporter, please write us (%s) your user id so we can "
 #~ "highlight your account as a supporter one."
 #~ msgstr ""
+
 #~ "Ma tha tu ’nad neach-taic, nach cuir thu fios thugainn (%s) le ID a’ "
 #~ "chleachdaiche agad ach an soillsich sinn an cunntas agad mar fhear aig "
 #~ "neach-taic."
@@ -756,6 +727,7 @@ msgstr "crochaidhean: +"
 
 #~ msgid "(only if your computer is not shared with other people)"
 #~ msgstr ""
+
 #~ "(na dèan seo ma tha thu a’ co-roinneadh a’ choimpiutair seo le daoine "
 #~ "eile)"
 
@@ -770,6 +742,7 @@ msgstr "crochaidhean: +"
 #~ "4. Yorg's XMPP code is still experimental: if you have important data in "
 #~ "your XMPP account, please create a new account for playing Yorg with."
 #~ msgstr ""
+
 #~ "1. Ma tha thu ’nan neach-taic, innis an is jabber agad dhuinn (flavio@ya2."
 #~ "it) ach an cuir sinn comharra ris a’ chunntas agad gur e neach-taic a th’ "
 #~ "annad.\n"
@@ -788,6 +761,7 @@ msgstr "crochaidhean: +"
 #~ "like nickname@domainname.tld where nickname is your nickname and "
 #~ "domainname.tld is a valid domain."
 #~ msgstr ""
+
 #~ "Chan eil an id jabber id a chuir thu a-steach mar bu chòir: bu chòir do "
 #~ "choltas mar “far-ainm@àrainn.tld” a bhith air agus “far-anim” am far-ainm "
 #~ "agad agus “àrainn.tld” ’na àrainn dhligheach."
@@ -803,6 +777,7 @@ msgstr "crochaidhean: +"
 #~ "port-forwarding for port 9099 on your host and your firewall allows "
 #~ "traffic for Yorg on port 9099."
 #~ msgstr ""
+
 #~ "Mearachd leis a’ cheangal. Dearbhaich gun deach an rùtair agad a "
 #~ "rèiteachadh ach an sìn e air adhart port 9099 air an fhrithealaiche agad "
 #~ "agus gun leig a’ chachaileith-theine trafaig tro phort 9099 airson Yorg."
