--- a/assets/po/es_ES.po
+++ b/assets/po/es_ES.po
@@ -3,41 +3,40 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <leillo1975@jugandoenlinux.com>, 2017.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"PO-Revision-Date: 2019-07-10 12:42+0200\n"
 "Last-Translator: Leandro Vergara <leillo1975@jugandoenlinux.com>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"Language: es_ES\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.2.1\n"
 
 #: menu/numplayerspage.py:16
 msgid "How many players?"
-msgstr ""
+msgstr "¿Cuantos jugadores?"
 
 #: menu/already_dlg.py:12
 #, python-format
 msgid "The key %s is already used by player %s for %s."
-msgstr ""
+msgstr "La clave %s está ya en uso por el jugador %s para %s."
 
 #: menu/onlinepage.py:27
 msgid "Play"
-msgstr ""
+msgstr "Jugar"
 
 #: menu/onlinepage.py:31 menu/registerpage.py:45
 msgid "Register"
 msgstr "Registrarte"
 
 #: menu/onlinepage.py:32
-#, fuzzy
 msgid "Reset password"
-msgstr "guardar contraseña"
+msgstr "Resetear Contraseña"
 
 #: menu/onlinepage.py:69
 msgid "Server problem"
@@ -66,11 +65,11 @@ msgstr "Conectando"
 
 #: menu/multiplayerpage.py:23
 msgid "Local"
-msgstr ""
+msgstr "Local"
 
 #: menu/multiplayerpage.py:24
 msgid "Online"
-msgstr ""
+msgstr "En Linea"
 
 #: menu/resetpage.py:21 menu/registerpage.py:21
 msgid "Your email:"
@@ -144,9 +143,8 @@ msgid "Supporters"
 msgstr "Contribuyentes"
 
 #: menu/inputpage.py:34 menu/inputpage.py:36
-#, fuzzy
 msgid "Player"
-msgstr "Un Jugador"
+msgstr "Jugador"
 
 #: menu/inputpage.py:39 menu/inputpage.py:42
 msgid "Use the joypad when present"
@@ -182,7 +180,7 @@ msgstr "Presiona la tecla para memorizarla"
 
 #: menu/inputpage.py:157
 msgid "Player 2"
-msgstr ""
+msgstr "Jugador 2"
 
 #: menu/inputpage.py:160
 msgid "Pause"
@@ -190,11 +188,11 @@ msgstr "Pausa"
 
 #: menu/inputpage.py:195
 msgid "Player 3"
-msgstr ""
+msgstr "Jugador 3"
 
 #: menu/inputpage.py:218
 msgid "Player 4"
-msgstr ""
+msgstr "Jugador 4"
 
 #: menu/optionpage.py:37
 msgid "Language"
@@ -289,6 +287,8 @@ msgid ""
 "If you use the keyboard, press FIRE to edit the field, then ENTER when "
 "you're done"
 msgstr ""
+"Si usas el teclado, presiona DISPARO para editar el campo, luego ENTER "
+"cuando estés listo"
 
 #: menu/driverpage.py:159 menu/driverpage.py:167 menu/driverpage.py:168
 #: menu/driverpage.py:169 menu/driverpage.py:171 menu/driverpage.py:174
@@ -298,14 +298,12 @@ msgid "your name"
 msgstr "Tu Nombre"
 
 #: menu/driverpage.py:196
-#, fuzzy
 msgid "Select the drivers"
-msgstr "Selecciona el Piloto"
+msgstr "Selecciona los pilotos"
 
 #: menu/driverpage.py:200
-#, fuzzy
 msgid "Write your names:"
-msgstr "Escribe tu Nombre:"
+msgstr "Escribe sus Nombres:"
 
 #: menu/driverpage.py:239
 msgid ""
@@ -313,13 +311,16 @@ msgid ""
 "you're done. Other players can't move while someoneis writing (since, with "
 "keyboards, some letters may be bound to movements)."
 msgstr ""
+"Si tu usas el teclado, presiona DISPARO para editar el campo, luego ENTER si "
+"estás listo. Otros jugadores no pueden moverse mientras alguien está "
+"escribiendo (ya que, con los teclados, algunas letras pueden estar ligadas a "
+"los movimientos)"
 
 #: menu/mainpage.py:99
 msgid "Single Player"
 msgstr "Un Jugador"
 
 #: menu/mainpage.py:100
-#, fuzzy
 msgid "Multiplayer"
 msgstr "Multijugador"
 
@@ -352,7 +353,6 @@ msgid "show"
 msgstr "Mostrar"
 
 #: menu/clientpage.py:24
-#, fuzzy
 msgid "Current waiting hosting users"
 msgstr "Usuarios conectados actualmente"
 
@@ -385,7 +385,7 @@ msgstr "Tu email ya está siendo usado."
 
 #: menu/registerpage.py:79
 msgid "Please use more than 6 characters for your password."
-msgstr ""
+msgstr "Por favor, usa más de 6 caracteres para tu contraseña."
 
 #: menu/singleplayerpage.py:15
 msgid "Single race"
@@ -493,7 +493,6 @@ msgid "remove from the match"
 msgstr "borrar de la partida"
 
 #: menu/multiplayer/network_dlg.py:13
-#, fuzzy
 msgid ""
 "Connection error. Please check that (i) your firewall allows traffic for "
 "Yorg on port 9099 and (ii) the server user has opened her port 9099 (here is "
@@ -611,9 +610,8 @@ msgid "weapon"
 msgstr "Arma:"
 
 #: yyagl/racing/car/gui.py:449
-#, fuzzy
 msgid "waiting for the other players"
-msgstr "Por favor, espera por el Servidor"
+msgstr "Esperando por los otros jugadores"
 
 #: yyagl/racing/car/gui.py:577
 #, python-format
